# veterinary_agent

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  compose.dev.yml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: backend-cd.yml  backend-ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_pgvector_schema.py  0002_memory_concurrency_schema.py  0003_access_control_and_idempotency.py  0004_p1_reports_and_rag_governance.py
configs/: api_ingress.yaml  checkpoint_store.yaml  conversation_store.yaml  guardrail_framework.yaml  llm_gateway.yaml  observability.yaml  runtime_config.yaml  vet_context_builder.yaml  vet_education.yaml  vet_input_safety_assessor.yaml  vet_nonmedical_pet_care.yaml  vet_response_composer.yaml  vet_safety_trigger.yaml  vet_standard_consultation.yaml  vet_task_decomposer.yaml
data/seeds/: consultation_rules.json  knowledge_chunks.json  safety_rules.json
docker/litellm/: config.yaml
docker/mem0/: configure_mem0.py
docs/: business-smoke-requests.md  component_catalog.md  context-builder.md  design_spec.md  docker-compose-dev.md  docker-compose-production.md  interface_spec.md  p1-agent-hardening.md  prd.md  temporary-memory.md  temporary-rag.md  兽医Agent需求文档-20260618.md  开发环境介绍-业务部署指南.md
docs/api/: external_api.md
docs/dev/: 开发环境介绍-业务部署指南.md
docs/integration/: fields_mvp.md  integration_map.md
docs/safety/: compilation_guide.md  harm_rubric.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260708_0001_checkpoint_store_control_plane.py  20260709_0002_conversation_store.py  20260712_0003_logic_trace_store.py  __init__.py
rag_sources/: README.md
scripts/: dev-entrypoint.sh  dev.ps1  dev_request.py  import_knowledge_dir.py  seed_database.py
scripts/dev_payloads/: business_followup_first.json  business_followup_second.json  business_memory.json  business_multitask.json  business_safety_semantic.json  business_stream.json  followup_first.json  followup_second.json  idempotency.json  multitask.json  profile_memory.json  report_lab.json  safety_toxic.json
src/ingress/: __init__.py  app.py  dto.py  errors.py  orchestrator.py  routes.py
src/vet_agent/: __init__.py  config.py  container.py  contracts.py  ingress_adapter.py  main.py  orchestrator.py
src/veterinary_agent/: __init__.py
tests/: __init__.py  conftest.py  test_http_errors.py  test_http_settings.py  test_l0_middlewares.py  test_smoke.py  test_vet_agent_api.py
tests/agent_application_service/: __init__.py  helpers.py  test_ports.py  test_public_contract.py  test_service.py
tests/agent_runner/: __init__.py  helpers.py  test_component_contract.py  test_prompt_renderer.py  test_runtime_boundaries.py  test_structured_output.py
tests/agent_spec_registry/: __init__.py  test_default_registry.py
(+493 files in other folders)
