[project]
name = "veterinaryagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
    "uvicorn>=0.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "pyright>=1.1.411",
    "pytest>=8.4.2",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.deptry]
known_first_party = ["veterinary_agent"]

[tool.deptry.per_rule_ignores]
DEP002 = ["psycopg"]

[tool.pyright]
include = ["src", "tests", "main.py", "migrations"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
pythonPlatform = "Linux"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.hatch.build.targets.wheel]
packages = ["src/veterinary_agent"]
